@@ -1,3 +1,7 @@
+2005-10-19  Pierre Chifflier  <pollux@wzdftpd.net>
+
+	* feature: modules support in new config format
+
 2005-10-17  Pierre Chifflier  <pollux@wzdftpd.net>
 
 	* feature: pre_ip_check support in new config format
